# CxImage

./: .gitignore  CMakeLists.txt  README.md  fix_braces.py
.agents/skills/CxImage/: SKILL.md
.agents/skills/CxImage/agents/: openai.yaml
.claude/: ecc-tools.json  identity.json
.claude/commands/: fix-windows-msvc-compile-errors.md  merge-main-into-feature-branch.md
.claude/homunculus/instincts/inherited/: CxImage-instincts.yaml
.claude/skills/CxImage/: SKILL.md
.codex/: AGENTS.md
CxImage/: CMakeLists.txt  tif_xfile.cpp  ximabmp.cpp  ximadef.h  ximaenc.cpp  ximage.h  ximainfo.cpp  ximamng.cpp  ximaraw.cpp  ximatran.cpp  ximawmf.cpp  ximawnd.cpp
demo2/: CMakeLists.txt  Console.cpp
jasper/: CMakeLists.txt
jasper/include/jasper/: jas_config.h  jas_types.h
jasper/jpc/: jpc_enc.c  jpc_qmfb.h  jpc_tsfb.c
jbig/: CMakeLists.txt
jpeg/: CMakeLists.txt
libpsd/: CMakeLists.txt  libpsd.h  psd_types.h  psd_zip.c
mng/: CMakeLists.txt
png/: CMakeLists.txt
raw/: CMakeLists.txt  libdcr.c
tiff/: CMakeLists.txt  tif_config.h  tif_ojpeg.c  tiffconf.h  tiffiop.h
zlib/: CMakeLists.txt  zconf.h  zconf.h.cmakein
